src/css/imports/custom-utilities.css
/* ... */
.group-hover:hover > .block-hover:hover img {
  opacity: 1;
} */

a.collection-next div {
  flex-direction: row-reverse;
  text-align: right;
}

a.collection-next .pager-title {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

a.collection-next .arrow {
  transform: scaleX(-1);
}

#project-brief a,
#about-description a {
  text-decoration: underline;
}

/* Filters */
#filters {
  transition: 0.33s opacity cubic-bezier(0.55, 0.055, 0.675, 0.19), 0.33s transform ease-in-out, 0.33s top ease-in-out;
  top: 0px;
}
#categories {
  max-height: 0;
  opacity: 0;
  will-change: max-height;
  transition: max-height 0.33s ease-in-out, opacity 0.33s ease-in-out;
  overflow: hidden;
}
#categories.opened {
  max-height: 600px;
  opacity: 1;
}

#catToggle::after {
  content: " +";
}
#catToggle.active::after {
  content: " -";
}

#filter-loading {
  transition: 0.1s opacity linear;
  will-change: opacity;
  opacity: 1;
}

#filter-error,
#all,
#all-divide {
  transition: 0.3s opacity linear;
  will-change: opacity;
  opacity: 0;
}

#filter-archive {
  transition: 0.15s opacity linear;
  will-change: opacity;
  opacity: 1;
}

/* #filter .ui-check.is-checked {
  color: #ff0000;
} */

#filter-error.active {
  opacity: 1;
}

.filter-item {
  transform: translate3d(0, 0, 0);
}

.filter-item img.lazyloading,
.filter-item img.lazyload {
  opacity: 0 !important;
}
.filter-item figcaption {
  will-change: opacity;
  opacity: 0;
  transition: opacity 0.33s ease-in-out;
}
.filter-item.active figcaption {
  opacity: 1 !important;
}
.filter-item img {
  will-change: opacity;
  opacity: 0;
  transition: opacity 0.33s ease-in-out;
}
.filter-item.active img {
  opacity: 1;
}

.filter-container {
  will-change: height;
  transition-duration: 0.8s;
  transition-property: height;
  min-height: 400px;
}

#filter-archive::after {
  position: absolute;
  background: #000;
  content: "";
  width: 200vw;
  height: 700vh;
  top:0;
  bottom:0;
  left:-2rem;
  right:0;
  overflow: visible;
  z-index: -1;
}


.spin {
  animation: fa-spin 2s infinite linear;
}

/**** disabling Isotope CSS3 transitions ****/
.collection-preview.lazyload svg, .collection-preview.lazyloading svg {
  opacity: 1;
  transition: opacity 0.33s ease-in-out;
}

.collection-preview.lazyloaded svg {
  opacity: 0 !important;
}


.filter-container.no-transition,
.filter-container.no-transition .filter-item,
.filter-container .filter-item.no-transition {
  transition-duration: 0s;
}

/* Collection slideshow */
.filter-item img {
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  object-fit: cover;
  transition: opacity 0.5s ease-in-out;
  opacity: 0;
}
.filter-item img:nth-child(1) {
  z-index: 4;
}
.filter-item.active img:nth-child(1) {
  opacity: 1;
}
.filter-item img:nth-child(2) {
  z-index: 3;
}
.filter-item img:nth-child(3) {
  z-index: 2;
}
.filter-item img:nth-child(4) {
  z-index: 1;
}


/* .filter-item.hover-animate img {
  transition-delay: 0.66s;
}

.filter-item img.lazyloaded:nth-child(n+2) {
  transition-delay: 1s;
} */


/* .filter-item.hover-off img {
  animation: showMe 1s reverse;
} */
/* .filter-item.hover-off {
   img:nth-child(1){
    opacity: 1 !important;
  }
  img:nth-child(2){
    opacity: 0!important;
  }
  img:nth-child(3){
    opacity: 0 
  }
  img:nth-child(4){
    opacity: 0;
  }
} */

@keyframes showMe {
  0% {
    opacity: 1;
  }
  17% {
    opacity: 1;
  }
  25% {
    opacity: 0;
  }
  92% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
/* About Page */
#about-description {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply text-white;
  }
}

/* Modal Popup */
.body-popup {
  z-index: 1010;
  display: none;

  &.is-poped-out {
    display: block;
  }
}

.popup-trigger {
  display: inline-block;
}

/* .popup-trigger h1, .popup-trigger h2 {
  opacity: 0;
  transition: 0.33s opacity ease-in-out 0.15s;
}

.popup-trigger img.lazyloaded + h1, .popup-trigger img.lazyloaded + h1 + h2 {
  opacity: 1;
} */

.popup-trigger img {
  opacity: 1;
  transition: 0.33s opacity ease-in-out;
}

.popup-trigger:hover img {
  opacity: 0;
}

.popup-modal {
  will-change: opacity;
  opacity: 0;
  pointer-events: none;
  transition: all 300ms ease-in-out;
  backface-visibility: hidden;

  &.is--visible {
    opacity: 1;
    pointer-events: auto;
  }
}


@responsive {
  .meta-hover h6 {
  opacity: 0;
  transition: 0.33s opacity cubic-bezier(0.55, 0.055, 0.675, 0.19);
}

  .meta-hover:hover h6 {
    opacity: 1;
  }
  .grid-padding {
    background-color: #ff0000;
    padding: 0 -1rem;
  }
  .title-alignment {
    transform: translate3d(0, -45vh, 0);
  }
  .border-box {
    box-sizing: border-box;
  }
  .content-box {
    box-sizing: content-box;
  }
  .vh-20 {
    height: 20vh;
  }
  .vh-25 {
    height: 25vh;
  }
  .vh-33 {
    height: 33vh;
  }
  .vh-50 {
    height: 50vh;
  }
  .vh-66 {
    height: 66vh;
  }
  .vh-75 {
    height: 75vh;
  }
  .vh-80 {
    height: 80vh;
  }
  .vh-90 {
    height: 90vh;
  }
  .vh-screen {
    height: 100vh;
  }
  .rellax-on {
    transform: translate3d(0px, 0px, 0px);
  }
}

.rellax {
  transform: translate3d(0px, 0px, 0px);
  will-change: transform;
}

@media only screen and (max-width: 1024px) {
  .rellax,
  img.rellax + figcaption {
    margin-left: 0 !important;
    margin-right: 0 !important;
  }
  .rellax-off {
    transform: translate3d(0px, 0px, 0px) !important;
  }
  header#project-header img.featured {
    mask-size: 50% auto;
  }
/* 
  .sal-off {
    opacity: 1 !important;
    transform: translate3d(0px, 0px, 0px) !important;
  } */

  .popup-modal {
    height: 100vh !important;
    width: 100vw !important;
    top: 0 !important;
    bottom: 0 !important;
    left: 0 !important;

    .popup-modal__close {
      right: 0px !important;
      top: 0px !important;
    }

    /* section {
     height: 100% !important;
   } */
  }
}

@media only screen and (max-width: 1280px) {
  .rellax-off-lg {
    transform: translate3d(0px, 0px, 0px) !important;
  }
}

